# openFjord1D

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  evaluate_different_diffusivities_open.py  malaspina_hypsography.csv  pyproject.toml  readme.md  setup.py  simulate2.py  simulate_malaspina.py  test.py
.github/workflows/: wheels.yml
examples/: simulate_closed.py
openFjord1D/: CMakeLists.txt  libbasindiffusion.f90
openFjord1D/python/: __init__.py
src/: CMakeLists.txt  constants.f90  debug_tools.f90  libbasindiffusion.f90  linalg_debug.f90  linalg_tools.f90  oceanography_tools.f90
src/openFjord1D/: __init__.py
