[build-system]
requires = ["setuptools", "wheel", "numpy", "cmake", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "openFjord1D"
version = "1.0.0"
description = "1-dimensional basin temperature and salinity model"
authors = [{ name = "Jack Beagley", email = "jack.beagley@outlook.com" }]
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
# If your python package code lives in src/python/
wheel.packages = ["src/openFjord1D"]

# Point scikit-build-core at your CMake project
cmake.source-dir = "src"

